--- a/day-03-faq-accordion/css/main.css
+++ b/day-03-faq-accordion/css/main.css
@@ -26,3 +26,111 @@
   font-display: swap;
 }
 
+/* CUSTOM PROPS */
+:root {
+  /* colors */
+  --text-color: #3b213f;
+  --text-hover: #b429f3;
+  --body-background-color: #f9eeff;
+  --text-color-gray: #979099;
+
+  /* fonts */
+  --heading-font-family: "Work Sans", sans-serif;
+  --body-font-family: "Work Sans", sans-serif;
+}
+
+/* GLOBAL */
+html {
+  box-sizing: border-box;
+  height: 100%;
+  scroll-behavior: smooth;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  display: flex;
+  height: 100%;
+  font-family: var(--body-font-family), sans-serif;
+  background: var(--body-background-color);
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+}
+
+.bg-image {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.bg-image img {
+  width: 100%;
+  max-height: 220px;
+  height: 100%;
+  object-fit: cover;
+}
+
+.box {
+  position: absolute;
+  max-width: 600px;
+  background-color: white;
+  padding: 40px;
+  border-radius: 20px;
+}
+
+.title {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.title h3 {
+  font-size: 4rem;
+}
+
+.accordion-item {
+  padding: 1rem 0;
+  border-bottom: 1px solid var(--body-background-color);
+}
+
+.accordion-title {
+  font-size: 1.1rem;
+  font-weight: 700;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.accordion-content p {
+  color: var(--text-color-gray);
+  padding: 1rem 0;
+}
+
+.accordion-content {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.4s ease;
+}
+
+.accordion-content.open {
+  max-height: 500px;
+}
